feat(finance): Sprint 18 - 13 周滚动现金流预测 + R-CASH-01 现金缺口规则
后端 (5 文件 新增):
- finance/vo/CashFlowItemVO.java       流入/流出单项 (type / amount / date / ref)
- finance/vo/CashFlowWeekVO.java       单周 VO (inflow / outflow / netFlow / cumBalance)
- finance/vo/CashFlowForecastVO.java   总 VO (含风险指标: minBalance / minBalanceWeek / gapAlert)
- finance/mapper/CashFlowMapper.java   3 个 SQL: arDue / promises (覆盖 AR) / apDue
- finance/service/CashFlowForecastService.java  周分桶 + 累计算法 + 风险扫描
- finance/controller/CashFlowForecastController.java  GET /v1/finance/cash-flow/forecast

后端 (1 文件 改造):
- ops/service/rule/CashGapRule.java     Sprint 10 留的 stub 升级为真实
  - 调 forecast(0) 看 minBalance, severity 按缺口深度分级
  - high  缺口 >= 500K KES
  - medium 100K-500K
  - low  <100K
  - description 含建议 ('Ensure cash reserves of at least X KES')

前端 (2 文件 新增):
- frontend/src/views/finance/CashFlowForecast.vue  完整页面
  - 蓝色 hero + 期初输入 (localStorage 缓存) + 刷新
  - 5 KPI 卡 (期初 / 13w 流入 / 流出 / 净 / 期末)
  - el-alert 红色 gap 预警 banner
  - ECharts 柱+线复合图: 绿色流入柱 / 红色流出柱 / 蓝色累计线 + 0 markLine + tooltip
  - 13 周明细表 + 展开行显示当周流入/流出详情
- frontend/src/api/finance.js  加 getCashFlowForecast()

前端 (4 文件 改动):
- router/index.js               加 /finance/cash-flow
- layouts/AppLayout.vue         加菜单项
- i18n/en.js + zh.js            加 cashFlow.* (24 key) + menu.cashFlow

业务价值:
  消费 Sprint 16 的 collection_log + Sprint 17 的 PO due_date,
  解决 "未来现金链什么时候断" 的核心问题.
  R-CASH-01 自动入决策中心, 给 CEO/CFO 提前预警.